--- a/WebTest/Login.html
+++ b/WebTest/Login.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        div{
+            margin-top: 25px;
+        }
+    </style>
 </head>
 <body>
-    Hello World !!
+    <div>Account:<input type="text" name="Account"></div>
+    <div>Password:<input type="password" name="Password"></div>
+    <div>
+        <button type="submit">Login</button>
+        <a href="Register.html">Register</a>
+    </div>
 </body>
 </html>
