--- a/WebTest/Login.html
+++ b/WebTest/Login.html
@@ -11,11 +11,13 @@
     </style>
 </head>
 <body>
-    <div>Account:<input type="text" name="Account"></div>
-    <div>Password:<input type="password" name="Password"></div>
-    <div>
-        <button type="submit">Login</button>
-        <a href="Register.html">Register</a>
-    </div>
+    <form action="LoginServer.php" method="post">
+        <div>Account:<input type="text" name="Account"></div>
+        <div>Password:<input type="password" name="Password"></div>
+        <div>
+            <button type="submit">Login</button>
+            <a href="Register.html">Register</a>
+        </div>
+    </form>
 </body>
 </html>
