--- a/WebTest/Register.html
+++ b/WebTest/Register.html
@@ -6,6 +6,14 @@
     <title>Register</title>
 </head>
 <body>
-    Hello World !!
+    <form action="RegisterServer.php" method="post">
+        <div>Name:<input type="text" name="NewName"></div>
+        <div>Account:<input type="text" name="NewAccount"></div>
+        <div>Password:<input type="password" name="NewPassword"></div>
+        <div>
+            <button type="submit">Register</button>
+            <a href="Login.html">Reset</a>
+        </div>
+    </form>
 </body>
 </html>
