--- a/WebTest/Register.html
+++ b/WebTest/Register.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <style>
+        div{
+            margin-top: 25px;
+        }
+    </style>
 </head>
 <body>
     <form action="RegisterServer.php" method="post">
