--- a/WebTest/Login.html
+++ b/WebTest/Login.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <form action="LoginServer.php" method="post">
-        <div>Account:<input type="text" name="Account"></div>
-        <div>Password:<input type="password" name="Password"></div>
+        <div>Account:<input type="text" name="Account" required></div>
+        <div>Password:<input type="password" name="Password" required></div>
         <div>
             <button type="submit">Login</button>
             <a href="Register.html">Register</a>
