--- a/WebTest/Register.html
+++ b/WebTest/Register.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <form action="RegisterServer.php" method="post">
-        <div>Name:<input type="text" name="NewName"></div>
-        <div>Account:<input type="text" name="NewAccount"></div>
-        <div>Password:<input type="password" name="NewPassword"></div>
+        <div>Name:<input type="text" name="NewName" required></div>
+        <div>Account:<input type="text" name="NewAccount" required></div>
+        <div>Password:<input type="password" name="NewPassword" required></div>
         <div>
             <button type="submit">Register</button>
             <a href="Login.html">Reset</a>
